# mana-box-parser

./: Cargo.toml  README.md
src/: main.rs
ui/: app-window.slint
