[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1", features = ["derive"] }
rfd = "0.15.0"
slint = "1.7.2"

[build-dependencies]
slint-build = "1.7.2"
